# contest-engine

./: Cargo.toml  N9UNX-CWT-20260212-0300z.adi  N9UNX-NAQP-20250110.adi  README.md  contest-engine-start-plan.md  contestspec-plan.md  state-qso-party-implementation-plan.md  state-qso-party-spec-data.md  state-qso-party-survey-plan.md
docs/: cabrillo-contest-names.md  spec-contest-format.md
specs/: README.md  arrl_dx.json  cqww_cw.json  cwt.json  deqp.json  flqp.json  gaqp.json  inqp.json  miqp.json  moqp.json  mst.json  naqp.json  ndqp.json  neqp.json  neqsop.json  nhqp.json  nmqp.json  ns_sprint.json  onqp.json  qcqp.json  ss.json
specs/domains/: ca_provinces.txt  de_counties.txt  dxcc_entities_excluding_w_ve.txt  fl_counties.txt  ga_counties.txt  in_counties.txt  mi_counties.txt  mo_counties.txt  moqp_bonus_stations.txt  nd_counties.txt  ne_counties.txt  neqp_counties.txt  neqsop_bonus_stations.txt  nh_counties.txt  nh_in_state_mults.txt  nm_counties.txt  ns_sprint_multipliers.txt  on_multiplier_areas.txt  onqp_bonus_stations.txt  qc_regions.txt  ss_sections.txt  us_states.txt
src/: adapter.rs  integration.rs  lib.rs  main.rs  spec.rs  types.rs
tests/: regression_existing_specs.rs
tests/fixtures/logs/: arrl_dx.log.json  cqww.log.json  cqww_cw.log.json  cwt.log.json  deqp.log.json  flqp.log.json  gaqp.log.json  inqp.log.json  inqp_in_state.log.json  miqp.log.json  moqp.log.json  mst.log.json  naqp.log.json  ndqp.log.json  neqp.log.json  neqsop.log.json  nhqp.log.json  nmqp.log.json  ns_sprint.log.json  onqp.log.json  qcqp.log.json  ss.log.json
(+21 files in other folders)
