[package]
name = "contest-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
station-data = { git = "https://github.com/chadsbrown/station-data" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
adif_parser = { git = "https://github.com/chadsbrown/adif_parser" }
